@@ -6,6 +6,7 @@ CCMenu 0.9.3
 
 * Now showing a grey icon when project status unavailable
 * Completely reworked server polling to be asynchronous and more resilient
+* Added workaround for broken URLs provided by CruiseControl.rb
 * Added remaining icons
 
 
